# ugv_peripherals

./: .gitattributes  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
action_tutorials_cpp/: CMakeLists.txt  compile_commands.json  package.xml
action_tutorials_cpp/.cache/clangd/index/: fibonacci_action_server.cpp.DE5A9C69E5ADD9AB.idx  visibility_control.h.5215EBD3244CE21A.idx
action_tutorials_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
action_tutorials_interfaces/: CMakeLists.txt  compile_commands.json  package.xml
launch/: battery.launch.py  system_launch.py
more_interfaces/: CMakeLists.txt  compile_commands.json  inaccurate-export.txt  package.xml
more_interfaces/.cache/clangd/index/: publish_address_book.cpp.BED5733111730855.idx
more_interfaces/src/: publish_address_book.cpp
scripts/: slice-video-in-half.sh
src/: blink_test.cpp  deterrence_event_trigger.cpp  lights_controller.cpp  lights_server.cpp  serial_device_node.cpp  speaker_action_client.cpp  speaker_action_server.cpp  wav-reporting.cpp
ugv_interfaces/: CMakeLists.txt  package.xml
ugv_interfaces/action/: BlinkLights.action  PlaySpeakers.action
ugv_peripherals/: CMakeLists.txt  compile_commands.json
ugv_peripherals/.cache/clangd/index/: speaker_action_server.cpp.2327CC2D6D25D68F.idx
ugv_peripherals/audio/: custom_play_audio.py  periodic_growl_node.py  speaker.py  speaker_node.py
ugv_peripherals/lights/: battery_node.py  flashing_node.py  get-wifi-strength.py
ugv_peripherals/serial/: get_tty_acm.py  serial_controller_node.py  serial_echo_node.py  serial_toolbox.py
