<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_peripherals</name>
  <version>0.0.1</version>
  <description>This package contains software for testing and controlling all of the rover peripherals.</description>
  <maintainer email="scokro7141@gmail.com">lidc</maintainer>
  <maintainer email="pedram.kayedpour@stonybrook.edu">PMorghK</maintainer>
  <maintainer email="ruthvick.bandaru@stonybrook.edu">Ruthvick Bandaru</maintainer>
  <maintainer email="eric.yang2@stonybrook.edu">Eric Yang</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
